# community-bank-screener

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/middleware/: bot_protection.py
backend/models/: bank.py
backend/routers/: banks.py  branches.py  credit_unions.py  financials.py
backend/services/: fdic.py  ncua.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/banks/[cert]/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/credit-unions/: page.tsx
frontend/app/map/: page.tsx
frontend/app/mutual-tracker/: page.tsx
frontend/components/layout/: Nav.tsx  Providers.tsx
frontend/components/map/: BranchMap.tsx
frontend/components/screener/: BankTable.tsx  CreditUnionTable.tsx  ScreenerPanel.tsx
frontend/components/tearsheet/: PeerCompare.tsx  TearSheet.tsx
frontend/lib/: api.ts  types.ts
