[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "community-bank-screener-backend"
version = "0.1.0"
description = "Community bank screener API — FDIC + NCUA data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "cachetools>=5.3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]
